--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "encoding-down": "^6.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
     "level": "^6.0.0",
     "level-session-store": "^2.2.0",
     "level-ws": "^2.0.0",
     "leveldown": "^5.4.1",
     "levelup": "^4.3.2",
+    "nodemon": "^2.0.2",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
