--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "del": "^5.1.0",
     "ejs": "^2.7.4",
     "encoding-down": "^6.3.0",
